# kubectl-get-sa-secret

./: .gitignore  README.md  pyproject.toml
kubectl_get_sa_secret/: main.py
tests/: test_kubectl_get_sa_secret.py
