[tool.poetry]
name = "kubectl-get-sa-secret"
version = "0.1.0"
description = ""
authors = ["darklore <zodiac.brave.story@gmail.com>"]

[tool.poetry.scripts]
kubectl-get_sa_secret = "kubectl_get_sa_secret.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11"
pytest = "^6.2"
pytest-flake8 = "^1.0"
pytest-black = "^0.3"
pytest-isort = "^2.0"
pytest-yapf = "^0.1"
pytest-mypy = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
